[fix] Fixed issues of reveal-container with transform incorrect size and button border and panel z-index and panel footer overflow.

--- a/src/styles/theme/base/button/index.scss
+++ b/src/styles/theme/base/button/index.scss
@@ -47,7 +47,6 @@
             width: 100%;
             height: 100%;
             background: rgba(251, 251, 251, 1);
-            border: rgba(0, 0, 0, 0.1) solid thin;
             outline: none;
             box-sizing: border-box;
             transition: all 0.3s;
@@ -59,6 +58,16 @@
                 justify-content: center;
                 align-items: center;
             }
+        }
+
+        .fv-button-regular-border
+        {
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            border: rgba(0, 0, 0, 0.1) solid thin;
         }
     }
 }
