--- a/src/styles/theme/base/panel/index.scss
+++ b/src/styles/theme/base/panel/index.scss
@@ -28,6 +28,7 @@
         display: flex;
         flex-direction: column;
         box-shadow: $ms-depth-shadow-64;
+        overflow: hidden;
 
         &.default-side {
             top: 0px;
