--- a/src/styles/theme/dark/button/index.scss
+++ b/src/styles/theme/dark/button/index.scss
@@ -7,11 +7,14 @@
 
             .fv-button-container {
                 background: rgba(45, 45, 45, 1);
-                border: rgba(48, 48, 48, 1) solid thin;
 
                 span.fv-btn-content-block {
                     color: whitesmoke;
                 }
+            }
+
+            .fv-button-regular-border {
+                border: rgba(48, 48, 48, 0.1) solid thin;
             }
         }
     }
